<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qarm_v1</name>
  <version>1.0.0</version>
  <description>ROS2 package containing Gazebo simulation of Quanser QArm.</description>
  <maintainer email="r.herrmann@ostfalia.de">Robin Herrmann</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
