<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qarm_v2</name>
  <version>1.0.0</version>
  <description>EXPERIMENTAL branch. Impements effort controller to use with PID control (PID Folder)</description>
  <maintainer email="deltawafer.r@gmail.com">Deltawafer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
